fix footer on mobile

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -233,6 +233,7 @@ footer.footer {
 	z-index:100;
 	@include mobile {
 		padding:0 40px 30px;
+		position:absolute;
 	}
 
 	ul {
